Reformated default templates
+ deleted default templates
+ added a new post
+ add favicons

--- a/_includes/favicons.html
+++ b/_includes/favicons.html
@@ -1,1 +1,5 @@
-<link rel="shortcut icon" type="image/x-icon" href="{{ "images/favicon.ico" | relative_url }}">
+<link href = '{{ "images/favicon.ico" | relative_url }}' rel = "shortcut icon" type = "image/x-icon">
+<link href = '{{ "images/apple-touch-icon.png" | relative_url }}' rel = "apple-touch-icon" sizes = "180x180">
+<link href = '{{ "images/favicon-32x32.png" | relative_url }}' rel = "icon" sizes = "32x32" type = "image/png">
+<link href = '{{ "images/favicon-16x16.png" | relative_url }}' rel = "icon" sizes = "16x16" type = "image/png">
+<link href = '{{ "images/site.webmanifest" | relative_url }}' rel = "manifest">
