--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,6 +431,8 @@ table th { text-align: center !important; }
 
 pre code { font-size: 15px !important; }
 
+.post-content p, .post-content li { text-align: justify; }
+
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
 .language-python + .language-plaintext { border-left: 1px solid grey; margin-left: 1rem !important; }
